# ffmpeg-demo

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xyq/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFMpegPlayer.cpp  FFMpegPlayer.h  Logger.h  native-lib.cpp
app/src/main/cpp/base/: AVPacketQueue.cpp  AVPacketQueue.h  FFAVDecoder.cpp  FFAVDecoder.h  FFReader.cpp  FFReader.h
app/src/main/cpp/decoder/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/include/libavformat/: avio.h
app/src/main/cpp/ffmpeg/include/libavutil/: avassert.h  hwcontext_d3d11va.h
app/src/main/cpp/main/: FFMpegPlayer.cpp  FFMpegPlayer.h
app/src/main/cpp/reader/: FFReader.cpp  FFReader.h  FFVideoReader.cpp  FFVideoReader.h
app/src/main/cpp/settings/: CompileSettings.h
app/src/main/cpp/utils/: CommonUtils.h  FFMpegUtils.cpp  FFmpegUtils.cpp  FFmpegUtils.h  ImageDef.h  Logger.h  MutexObj.h  TraceUtils.cpp
app/src/main/java/com/xyq/ffmpegdemo/: MainActivity.kt  PlayerListener.kt
app/src/main/java/com/xyq/ffmpegdemo/adapter/: ThumbnailAdapter.kt
app/src/main/java/com/xyq/ffmpegdemo/entity/: MediaInfo.kt  Thumbnail.kt
app/src/main/java/com/xyq/ffmpegdemo/model/: ButtonItemModel.kt  ButtonItemViewModel.kt  VideoThumbnailModel.kt  VideoThumbnailViewModel.kt
app/src/main/res/layout/: activity_main.xml  thumbnail_item.xml
app/src/main/res/raw/: fragment_camera.glsl  fragment_nv12.glsl  fragment_yuv.glsl  vertex_camera.glsl  vertex_normal.glsl  vertex_yuv.glsl
app/src/main/res/values/: attrs.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xyq/ffmpegdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libbase/: build.gradle
libbase/src/androidTest/java/com/xyq/libbase/: ExampleInstrumentedTest.kt
libbase/src/test/java/com/xyq/libbase/: ExampleUnitTest.kt
libcamerakit/: build.gradle
libcamerakit/src/androidTest/java/com/xyq/camerakit/: ExampleInstrumentedTest.kt
libcamerakit/src/main/: AndroidManifest.xml
libcamerakit/src/main/java/com/xyq/camerakit/: CameraPreviewActivity.kt
libcamerakit/src/main/res/layout/: camera_preview.xml
libcamerakit/src/main/res/values/: strings.xml
libcamerakit/src/test/java/com/xyq/camerakit/: ExampleUnitTest.kt
libffplayer/: build.gradle
libffplayer/src/androidTest/java/com/xyq/libffplayer/: ExampleInstrumentedTest.kt
libffplayer/src/main/assets/: green-screen-tiff.tiff
libffplayer/src/main/cpp/: CMakeLists.txt  native-lib.cpp
libffplayer/src/main/cpp/base/: AVPacketQueue.cpp
libffplayer/src/main/cpp/base/nativehelper/: JNIHelp.h  ScopedPrimitiveArray.h  ScopedUtfChars.h
libffplayer/src/main/cpp/decoder/: AudioDecoder.cpp  BaseDecoder.cpp  BaseDecoder.h  VideoDecoder.cpp  VideoDecoder.h
libffplayer/src/main/cpp/filter/: FFFilter.cpp  FFFilter.h
libffplayer/src/main/cpp/main/: FFMpegPlayer.cpp  FFMpegPlayer.h
libffplayer/src/main/cpp/reader/: FFReader.cpp  FFReader.h  FFVideoReader.cpp  FFVideoReader.h
libffplayer/src/main/cpp/utils/: CommonUtils.h  FFConverter.h  FFMpegUtils.cpp  ImageDef.h  MutexObj.cpp  TraceUtils.cpp  TraceUtils.h
libffplayer/src/main/cpp/writer/: FFVideoWriter.cpp  FFVideoWriter.h
libffplayer/src/main/java/com/xyq/libffplayer/: FFPlayer.kt
libffplayer/src/test/java/com/xyq/libffplayer/: ExampleUnitTest.kt
libhwplayer/: build.gradle
libhwplayer/src/androidTest/java/com/xyq/libhwplayer/: ExampleInstrumentedTest.kt
libhwplayer/src/main/java/com/xyq/libhwplayer/: HwPlayer.kt  ImagePlayer.kt
libhwplayer/src/test/java/com/xyq/libhwplayer/: ExampleUnitTest.kt
libjpeg/: build.gradle
libjpeg/src/androidTest/java/com/xyq/libjpeg/: ExampleInstrumentedTest.kt
libjpeg/src/main/cpp/: CMakeLists.txt  native-lib.cpp
libjpeg/src/main/cpp/source/: jconfigint.h
libjpeg/src/main/java/com/xyq/libjpeg/: JpegReader.kt
libjpeg/src/test/java/com/xyq/libjpeg/: ExampleUnitTest.kt
libmediapicker/: build.gradle
libmediapicker/src/androidTest/java/com/xyq/libmediapicker/: ExampleInstrumentedTest.kt
libmediapicker/src/main/: AndroidManifest.xml
libmediapicker/src/main/java/com/xyq/libmediapicker/: MediaPickerActivity.kt  PickerConfig.kt
libmediapicker/src/main/res/layout/: folders_view_item.xml  main_media_picker.xml  media_view_item.xml  picker_actionbar.xml
libmediapicker/src/main/res/values/: colors.xml  values.xml
libmediapicker/src/main/res/xml/: file_provider_paths.xml
libmediapicker/src/test/java/com/xyq/libmediapicker/: ExampleUnitTest.kt
libpng/: build.gradle
libpng/src/androidTest/java/com/xyq/libpng/: ExampleInstrumentedTest.kt
libpng/src/main/cpp/: CMakeLists.txt  native-lib.cpp
libpng/src/main/java/com/xyq/libpng/: PngReader.kt
libpng/src/test/java/com/xyq/libpng/: ExampleUnitTest.kt
librender/: build.gradle
librender/src/androidTest/java/com/xyq/librender/: ExampleInstrumentedTest.kt
librender/src/main/: AndroidManifest.xml
librender/src/main/assets/: yuv_test_i420.yuv  yuv_test_nv12.yuv
librender/src/main/java/com/xyq/librender/: FilterProcessor.kt  RenderManager.kt  ResManager.kt
librender/src/main/res/layout/: activity_render_test.xml
librender/src/main/res/raw/: fragment_filter_grey.glsl  fragment_filter_radius_corner.glsl  fragment_grey_filter.glsl  fragment_nv12.glsl  fragment_oes.glsl  fragment_rgba.glsl  fragment_yuv.glsl  vertex_normal.glsl
librender/src/test/java/com/xyq/librender/: ExampleUnitTest.kt
libutils/: build.gradle
libutils/src/androidTest/java/com/xyq/libutils/: ExampleInstrumentedTest.kt
libutils/src/main/cpp/: CMakeLists.txt
libutils/src/main/cpp/jni/: JNIHelp.h
libutils/src/main/cpp/utils/header/: Logger.h
libutils/src/main/java/com/xyq/libutils/: CommonUtils.kt  FileUtils.kt  TraceUtils.kt
libutils/src/test/java/com/xyq/libutils/: ExampleUnitTest.kt
(+86 files in other folders)
